packages/base/data/test/error/cabecadeboi-neigh-line-invalid2.gpm
1 cabecadeboi900.shp cabecadeboi900.shp distance 
C00L00 5
C00L00 900 C00L02 900 C00L03 1800  
